; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_stream.c_sk_stream_wait_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_stream.c_sk_stream_wait_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 }

@wait = common dso_local global i32 0, align 4
@TASK_INTERRUPTIBLE = common dso_local global i32 0, align 4
@current = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sk_stream_wait_close(%struct.sock* %0, i64 %1) #0 {
  %3 = alloca %struct.sock*, align 8
  %4 = alloca i64, align 8
  store %struct.sock* %0, %struct.sock** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %40

7:                                                ; preds = %2
  %8 = load i32, i32* @wait, align 4
  %9 = call i32 @DEFINE_WAIT(i32 %8)
  br label %10

10:                                               ; preds = %33, %7
  %11 = load %struct.sock*, %struct.sock** %3, align 8
  %12 = getelementptr inbounds %struct.sock, %struct.sock* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @TASK_INTERRUPTIBLE, align 4
  %15 = call i32 @prepare_to_wait(i32 %13, i32* @wait, i32 %14)
  %16 = load %struct.sock*, %struct.sock** %3, align 8
  %17 = load %struct.sock*, %struct.sock** %3, align 8
  %18 = call i32 @sk_stream_closing(%struct.sock* %17)
  %19 = icmp ne i32 %18, 0
  %20 = xor i1 %19, true
  %21 = zext i1 %20 to i32
  %22 = call i64 @sk_wait_event(%struct.sock* %16, i64* %4, i32 %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %10
  br label %35

25:                                               ; preds = %10
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* @current, align 4
  %28 = call i32 @signal_pending(i32 %27)
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %33, label %30

30:                                               ; preds = %26
  %31 = load i64, i64* %4, align 8
  %32 = icmp ne i64 %31, 0
  br label %33

33:                                               ; preds = %30, %26
  %34 = phi i1 [ false, %26 ], [ %32, %30 ]
  br i1 %34, label %10, label %35

35:                                               ; preds = %33, %24
  %36 = load %struct.sock*, %struct.sock** %3, align 8
  %37 = getelementptr inbounds %struct.sock, %struct.sock* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @finish_wait(i32 %38, i32* @wait)
  br label %40

40:                                               ; preds = %35, %2
  ret void
}

declare dso_local i32 @DEFINE_WAIT(i32) #1

declare dso_local i32 @prepare_to_wait(i32, i32*, i32) #1

declare dso_local i64 @sk_wait_event(%struct.sock*, i64*, i32) #1

declare dso_local i32 @sk_stream_closing(%struct.sock*) #1

declare dso_local i32 @signal_pending(i32) #1

declare dso_local i32 @finish_wait(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
